src/snapshots/antithesis_browser__instrumentation__tests__instrument_source_code_if.snap
---
source: src/instrumentation.rs
expression: code
---
window.antithesis = window.antithesis || { coverage: new Uint8Array(65536), previous = 0 };
let x;
function example(a, b) {
	if (a) {
		antithesis.coverage[(0x76be999e3e25b400 ^ antithesis.previous) % 65536] += 1;
		antithesis.previous = 0x76be999e3e25b400 >> 1;
		x = b;
	} else {
		antithesis.coverage[(0x7359aa1156ce8800 ^ antithesis.previous) % 65536] += 1;
		antithesis.previous = 0x7359aa1156ce8800 >> 1;
	}
}
console.log(example(true, 1));
