src/snapshots/antithesis_browser__instrumentation__tests__instrument_source_code_ternary.snap
---
source: src/instrumentation.rs
expression: code
---
window.antithesis_branch_coverage = window.antithesis_branch_coverage || new Uint8Array(64 * 1024);
window.antithesis_location_previous = window.antithesis_location_previous || 0;
function example(a, b, c) {
	return a ? (() => {
		antithesis_branch_coverage[(0x76be999e3e25b400 ^ antithesis_location_previous) % antithesis_branch_coverage.length] += 1;
		antithesis_location_previous = 0x76be999e3e25b400 >> 1;
		return b;
	})() : (() => {
		antithesis_branch_coverage[(0x7359aa1156ce8800 ^ antithesis_location_previous) % antithesis_branch_coverage.length] += 1;
		antithesis_location_previous = 0x7359aa1156ce8800 >> 1;
		return c;
	})();
}
console.log(example(true, 1, 2));
